[feature] added some class crud
