# internals/models/class.go
@@ -7,3 +7,10 @@ type Class struct {
 	ClassroomNumber int    `gorm:"not null" json:"classroom_number"`
 	Teacher         []User `gorm:"many2many:class_users;" json:"teacher"`
 }
+
+type SwagClass struct {
+	Name            string `gorm:"size:30; not null" json:"name"`
+	Description     string `gorm:"size:255; not null" json:"desc"`
+	ClassroomNumber int    `gorm:"not null" json:"classroom_number"`
+	TeacherID       uint   `gorm:"not null" json:"teacher_id"`
+}
